--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^46.4.5",
     "postcss": "^8.4.26",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
