--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "test": "npm run test:integration && npm run test:unit",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write .",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier . --write .",
     "test:integration": "playwright test",
     "test:unit": "vitest",
     "emulate": "firebase emulators:start --export-on-exit=./emulator-data --import=./emulator-data"
   },
   "devDependencies": {
+    "@playwright/test": "^1.36.2",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -30,6 +31,7 @@
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsdoc": "^46.4.5",
+    "playwright": "^1.36.2",
     "postcss": "^8.4.26",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
