--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "npm run test:integration && npm run test:unit",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier . --write .",
+    "lint": "prettier --check . --plugin 'prettier-plugin-svelte' --plugin 'prettier-plugin-tailwindcss' && eslint .",
+    "format": "prettier . --write . --plugin 'prettier-plugin-svelte' --plugin 'prettier-plugin-tailwindcss'",
     "test:integration": "playwright test",
     "test:unit": "vitest",
     "emulate": "firebase emulators:start --export-on-exit=./emulator-data --import=./emulator-data"
@@ -23,6 +23,8 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.3.1",
     "eslint": "^8.45.0",
@@ -31,24 +33,23 @@
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsdoc": "^46.4.5",
+    "eslint-plugin-svelte": "^2.32.4",
     "playwright": "^1.36.2",
     "postcss": "^8.4.26",
+    "prettier": "^3.0.0",
+    "prettier-plugin-svelte": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.4.2"
+    "vite": "^4.4.2",
+    "vitest": "^0.33.0"
   },
   "type": "module",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "eslint-plugin-svelte": "^2.32.4",
     "firebase": "^10.1.0",
-    "firebase-admin": "^11.10.1",
-    "prettier-plugin-svelte": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.4.1",
-    "vitest": "^0.33.0"
+    "firebase-admin": "^11.10.1"
   }
 }
