--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@icons-pack/svelte-simple-icons": "^3.0.0",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1"
   }
