--- a/package.json
+++ b/package.json
@@ -13,11 +13,20 @@
     "format": "prettier . --write . --plugin 'prettier-plugin-svelte' --plugin 'prettier-plugin-tailwindcss'",
     "test:integration": "playwright test",
     "test:unit": "vitest",
-    "emulate": "firebase emulators:start --export-on-exit=./emulator-data --import=./emulator-data"
+    "emulate": "firebase emulators:start --export-on-exit=./emulator-data --import=./emulator-data",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.95",
     "@playwright/test": "^1.36.2",
+    "@storybook/addon-essentials": "^7.1.1",
+    "@storybook/addon-interactions": "^7.1.1",
+    "@storybook/addon-links": "^7.1.1",
+    "@storybook/blocks": "^7.1.1",
+    "@storybook/svelte": "^7.1.1",
+    "@storybook/sveltekit": "^7.1.1",
+    "@storybook/testing-library": "^0.2.0",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -34,12 +43,16 @@
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsdoc": "^46.4.5",
+    "eslint-plugin-storybook": "^0.6.13",
     "eslint-plugin-svelte": "^2.32.4",
     "playwright": "^1.36.2",
     "postcss": "^8.4.26",
     "prettier": "^3.0.0",
     "prettier-plugin-svelte": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.1.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "tailwindcss": "^3.3.3",
