--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,8 @@
     "source": ".",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "frameworksBackend": {
-      "region": "us-east1"
+      "region": "us-east1",
+      "maxInstances": 10
     }
   },
   "storage": {
